--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,9 @@
     }
   ],
   
-// delete this line and paste below 
+ "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
+}
   
